# OpenScribe

./: .gitignore  .hintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MACOS_PARITY_PLAN.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
public/: splashscreen.html
scripts/: download_ocr_models.ps1  download_ocr_models.sh  generate-changelog.js  generate-icons.py  sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/ocr_models/: README.md
src-tauri/src/: accessibility.rs  database.rs  display.rs  lib.rs  logging.rs  main.rs  ocr.rs  overlay.rs  recorder.rs
src/components/: AboutModal.tsx  ChangelogModal.tsx  DeleteProgressModal.tsx  DraggableStepCard.tsx  ExportDropdown.tsx  ImageCropper.tsx  ImageEditor.tsx  ImageViewer.tsx  MarkdownViewer.tsx  PageShell.tsx  Pagination.tsx  Sidebar.tsx  Spinner.tsx  TitleBar.tsx  Toast.tsx  ToastHost.tsx  Tooltip.tsx  UpdateChangelogModal.tsx  UpdateNotification.tsx
src/components/editor/: ImageModal.tsx  MarkdownSourceEditor.tsx  SourceModeToggle.tsx  TiptapEditor.tsx  TiptapToolbar.tsx  index.ts
src/components/editor/extensions/: TauriImage.ts  TauriImageView.tsx
src/components/generation/: GenerationSplitView.tsx  StepProgressCard.tsx  StreamingMarkdownViewer.tsx  index.ts
src/components/notifications/: NotificationBell.tsx  NotificationCard.tsx  NotificationTray.tsx
src/components/recordings/: RecordingRow.tsx  RecordingThumbnail.tsx  RecordingsListView.tsx
src/components/settings/: AiProviderSection.tsx  GeneralSection.tsx  GenerationSection.tsx  ReliabilitySection.tsx  SettingsPanel.tsx  ShortcutsSection.tsx
src/features/recorder/: RecorderOverlay.tsx
src/hooks/: useMarkdownEditor.ts
src/lib/: aiPolicy.ts  aiService.ts  localAssets.ts  logger.ts  markdownHeadings.ts  parse-changelog.ts  pathUtils.ts  promptConstants.ts  providers.ts  recordingMeta.ts  relativeTime.ts  stepMapper.ts
src/lib/editor/: markdownUtils.ts
src/lib/export/: htmlExporter.ts  index.ts  markdownExporter.ts  pdfExporter.ts  utils.ts  wordExporter.ts
src/pages/: Dashboard.tsx  Editor.tsx  MonitorPicker.tsx  NewRecording.tsx  RecordingDetail.tsx  RecordingsList.tsx  Settings.tsx  loadRecordingDetail.ts
src/pages/recording-detail/: DocumentationEditor.tsx  StepsTab.tsx
src/store/: generationStore.ts  notificationStore.ts  recorderStore.ts  recordingsStore.ts  settingsPanelStore.ts  settingsStore.ts  startupStore.ts  toastStore.ts  updateStore.ts
